Fix collapsable cards

--- a/src/app/components/collapsible-cards/collapsible-cards.scss
+++ b/src/app/components/collapsible-cards/collapsible-cards.scss
@@ -1,6 +1,12 @@
 // Collapsible Cards Styles
 
-.max-h-0 {
+.server-name-box {
+    background-color: #000000 !important;
+    border-radius: 0.5rem;
+    padding: 0.375rem 1rem;
+  }
+  
+  .max-h-0 {
     max-height: 0;
     opacity: 0;
     padding-top: 0;
