--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -10,6 +10,31 @@
     }
   }
   
+  // Menu item colors
+  .menu-item {
+    color: #525D73; // Gray for all non-active items
+    
+    mat-icon {
+      color: #525D73;
+    }
+    
+    span {
+      color: #525D73;
+    }
+    
+    &-active {
+      color: #000000; // Black for active item
+      
+      mat-icon {
+        color: #000000;
+      }
+      
+      span {
+        color: #000000;
+      }
+    }
+  }
+  
   .collapse-button {
     position: absolute;
     right: -1rem;
